# find-work

./: .gitignore  README.md
back/: Cargo.toml  test-token.txt.example
back/src/: blob.rs  config.rs  data.rs  github.rs  issues.rs  main.rs  mock.rs  server.rs
data/: categories.json  config.json.example  schema.md  tab-category.json  tabs.json
front/: README.md  package-lock.json  package.json  webpack.config.js  webpack.config.prod.js
front/src/: index.js  tabs.js
static/: index.html  work.css
