[package]
name = "find-work"
version = "0.1.0"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
repository = "https://github.com/nrc/find-work"
description = "Find something Rusty to work on"

[dependencies]
base64 = "0.6"
env_logger = "0.4"
futures = "0.1"
hyper = "0.11"
log = "0.3"
reqwest = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
